assets/css/styles.css
/* Main */
html {
  overflow-x:hidden;
  margin: 0;
}

body {
  margin: 0;
}

* {
  box-sizing:border-box;
}

/* Particles  */
#particles-js{
  position: absolute;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: 50% 50%;
  background-repeat: no-repeat;
}

/* Navbar */

 .navbar-brand {
  font-size: 24px;
  color: #cccaca;
}

.navbar-container {
  padding: 20px 0 20px 0;
}

#header-items-container {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
}

.navbar-header {
  position: absolute !important;
  left: 0 !important;
}

.navbar>.container, .navbar>.container-fluid {
  justify-content: center !important;
  position: relative !important;
}

.navbar.navbar.fixed-top.fixed-theme {
  background-color: #fff;
  border-color: #fff;
  box-shadow: 0 0 5px rgba(0,0,0,.8);
}

#header-items-container > .header-item > a {
  color: #cccaca;
  font-size: 20px;
}

#header-items-container.fixed-theme > .header-item > a {
  color: #f05f40;
  font-size: 18px;
}

#header-items-container.fixed-theme > .header-item > a:hover {
  color: #cccaca !important;
}


.nav-link:hover {
  color: #f05f40 !important;
}

.navbar-brand.fixed-theme {
  font-size: 18px;
  color:#f05f40 !important;
}

.navbar-container.fixed-theme {
  padding: 0;
}

.navbar-brand.fixed-theme,
.navbar-container.fixed-theme,
.navbar.navbar-fixed-top.fixed-theme,
.navbar-brand,
.navbar-container{
  transition: 0.8s;
  -webkit-transition:  0.8s;
}

/* Head Section */

#head {
  width:100%;
  color:#cccaca;
  background-image:url("../../assets/img/background.jpg");
  background-position:center;
  background-size:cover;
  background-repeat:no-repeat;
  font-family:'Roboto Condensed', sans-serif;
  height: 90vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

#head h1 {
  margin: 0;
  letter-spacing: 0.2rem;
}

#title-head {
  margin-top:-100px;
  font-size: 36px;
  font-family:Arvo, serif;
  font-style:normal;
}

@media (min-width: 768px) {
  #title-head {
    font-size:60px;
  }
}

#subtitle {
  font-size:14px; 
}

@media (min-width: 768px) {
  #subtitle{
    font-size:18px;
    padding-top: 7px;
    font-weight:100;
    
  }
}

#button-head {
  z-index: 1;
  width:140px;
  font-size:22px;
  margin-top:15px;
  text-shadow:.5px .5px rgba(0,0,0,0.45);
  background-color:rgba(50,40,40,0.34);
  border-radius:20px;
  color:#f2a035;
  border-color:#f2a035;
}

#button-head:hover {
  background-color:rgba(204,202,202,0.3);
}

/* Recent Work Section */
#offer-heading {
  font-size:24px;
  text-align:center;
  font-weight:500;
  max-width:450px;
  color:#f05f40;
  margin: 0 auto;
  padding-top: 30px;

}

/* Testing */
#gallery .row {
  max-width:1130px;
  margin:auto;
}

#content-paragraph {
  font-size:18px;
  text-align:center;
  font-weight:300;
  max-width:600px;
  color:rgba(0,0,0,0.71);
  padding-top:10px;
  padding-bottom: 80px;
  margin: 0 auto;
}

#offer-heading-1 {
  font-size:24px;
  text-align:left;
  font-weight:500;
  max-width:450px;
  color:#f05f40;
}

#content-paragraph-1 {
  font-size:18px;
  text-align:left;
  font-weight:300;
  max-width:600px;
  color:rgba(0,0,0,0.71);
  padding-top:10px;
  padding-bottom: 50px;
}

#content-items {
  font-size:16px;
  text-align:left;
  font-weight:100;
  text-transform:uppercase;
  color:rgba(0,0,0,0.71);
}

#content-icon {
  padding:12px;
  border:1px solid rgba(20,42,238,0.5);
  border-radius:50%;
  color:#878ec8;
  font-size:28px;
  margin-right:10px;
}

#vertical-line {
  width:1px;
  height:200px;
  background-color:rgba(10,16,132,0.31);
  margin-left:28px;
}

.row {
  display:-ms-flexbox;
  display:flex;
  -ms-flex-wrap:wrap;
  flex-wrap:wrap;
  margin-right:0;
  margin-left:0;
}

p {
  color:rgba(0,0,0,0.7);
}

/* Software Skills Section */
.skill {
  background:rgb(242, 242, 242, 0.2);
  background:linear-gradient(to top right, #f6f6f7, #fefefe);
}

hr {
    max-width: 50px;
    border-width: 3px;
    border-color: #f05f40; 
}

.skill-heading {
  text-align: center;
  padding-top: 120px;
}

.container.skill-container {
  padding-top: 30px;
  padding-bottom: 10px;
}

.skill .row {
  margin:0 auto;
}

#arrow-skill-container {
  width: 80%;
  padding-bottom: 10px;
  text-align: center;
  margin: 0 auto;
} #arrow-skill-container p {
  margin-left: 10px;
}


.arrow-icon {
  height: 2.8em;
  width: 2.8em;
  display: block;
  padding: 0.5em;
  margin: 1em auto;
  position: relative;
  cursor: pointer;
  border-radius: 4px;
  transform: scale(0.7);
}

.left-bar {
  position: absolute;
  background-color: transparent;
  top: 0;
  left: 0;
  width: 40px;
  height: 10px;
  display: block;
  transform: rotate(35deg);
  float: right;
  border-radius: 2px;
}
.left-bar:after {
  content: "";
  background-color: #f05f40;
  width: 40px;
  height: 10px;
  display: block;
  float: right;
  border-radius: 6px 10px 10px 6px;
  transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 0.8);
  z-index: -1;
}

.right-bar {
  position: absolute;
  background-color: transparent;
  top: 0px;
  left: 26px;
  width: 40px;
  height: 10px;
  display: block;
  transform: rotate(-35deg);
  float: right;
  border-radius: 2px;
}
.right-bar:after {
  content: "";
  background-color: #f05f40;
  width: 40px;
  height: 10px;
  display: block;
  float: right;
  border-radius: 10px 6px 6px 10px;
  transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 0.8);
  z-index: -1;
}

.open .left-bar:after {
  transform-origin: center center;
  transform: rotate(-70deg);
}
.open .right-bar:after {
  transform-origin: center center;
  transform: rotate(70deg);
}

.block {
  transition:all 200ms ease;
  padding:2.5rem;
  background:#fff;
  border:1px solid #ebecec;
  border-radius:6px;
  -webkit-box-shadow:0 1px 2px rgba(0, 0, 0, 0.1);
  box-shadow:0 1px 2px rgba(0, 0, 0, 0.1);
  margin-bottom:1.6rem;
}

.block:hover {
  -webkit-transform:scale(1.1);
  transform:scale(1.1);
  -webkit-box-shadow:0px 6px 25px rgba(0, 0, 0, 0.1);
  box-shadow:0px 6px 25px rgba(0, 0, 0, 0.1);
}

.block img {
  display:block;
  max-width:60px;
  margin:0 auto;
  display:block;
  height:auto;
}

.block h3 {
  font-weight:400;
  font-size:1.1rem;
  margin:0.8rem 0 0;
  text-align:center;
}

*, *::before, *::after {
  -webkit-box-sizing:border-box;
  box-sizing:border-box;
}

/* Find Me */
#services {
  padding-top: 80px;
  padding-bottom: 170px;
  min-height: 550px;
}

.text-primary {
  color:#f05f40!important;
}

#services h3 {
  font-family:inherit;
  font-weight:500;
  line-height:1.2;
  color:rgb(48,45,45);
}

#services p {
  margin-top:0;
  margin-bottom:1rem;
}

.text-muted {
  color:#868e96!important;
}

#services hr {
  max-width:50px;
  border-width:3px;
  border-color:#f05f40;
}

.section-heading .h2, h2 {
  padding-top:40px;
  text-transform:uppercase;
}

.link-find {
  font-family:inherit;
  font-weight:500;
  line-height:1.2;
  color:rgb(48,45,45);
}

.link-find:hover {
  line-height:1.2;
  color:#f05f40;
  text-decoration:none;
}

/* Full Page Gallery */
/* #portfolio {
  
} */

.p-0 {
  padding:0!important;
}

.container-fluid {
  width:60%;
  padding-right:15px;
  padding-left:15px;
  margin-right:auto;
  margin-left:auto;
}

.no-gutters {
  margin-right:0;
  margin-left:0;
  margin-bottom: 60px;  
 /* border-bottom: 9px solid #e6e5e1; */
}

.portfolio-box:focus {
  outline:none;
}

a, a:hover {
  color:#f05f40;
}

a:hover {
  color:#d33311;
  text-decoration:underline;
}

.portfolio-box {
  position:relative;
  display:block;
  max-width:650px;
  margin:0 auto;
}



a {
  transition:all .2s;
}

a {
  text-decoration:none;
  background-color:transparent;
}

.img-fluid, .img-thumbnail {
  max-width:100%;
  height:auto;
}

img, svg:not(:root) {
  vertical-align:middle;
}

img {
  border-style:none;
}

.portfolio-box .portfolio-box-caption {
  position:absolute;
  bottom:0;
  display:block;
  width:100%;
  height:100%;
  text-align:center;
  opacity:0;
  color:#fff;
  background:rgba(240,95,64,.9);
  transition:all .2s;
}

.portfolio-box:hover .portfolio-box-caption {
  opacity:1;
}

.portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
  position:absolute;
  top:50%;
  width:100%;
  -webkit-transform:translateY(-50%);
  transform:translateY(-50%);
  text-align:center;
}

.text-faded {
  color:hsla(0,0%,100%,.7);
}

@media (min-width: 768px) {
  .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
    font-size:22px;
  }
}

.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
  font-size:14px;
  font-weight:600;
  text-transform:uppercase;
}

/* Contact Form */
.td-form {
  color:#ffffff;  
  height:100vh;  
  margin:1em auto 1em;
  margin:0;
  background-image:url("../../assets/img/contact-bg.jpg");
  font-family:Quicksand;
  background-position:center;
  background-size:cover;
  background-repeat:no-repeat;
}

@media (max-width: 500px) {
  .td-form {
    min-height: 700px;
  }
}

.td-form .row {
 margin: 0 auto;
}

.td-form-wrapper {
  margin:1em 0 1em;
  max-width:500px;
  margin:0 auto;
  padding-top:30px;
}

.td-form .form-control:focus {
  box-shadow:inset 0 1px 1px rgba(255,255,255,0.69),0 0 10px rgba(206,222,209,0.69);
}

.td-form .btn:not(:disabled):not(.disabled) {
  margin:1.8em 0 .8em;
}

.td-form .form-control {
  background-color:rgba(252,249,249,0);
  border:none;
  border-bottom:1px solid #ffffff;
  border-radius:0;
  color:rgb(255,255,255);
  padding-left:1.8em;
}

.td-form .form-control:hover {
  box-shadow:inset 0 1px 1px rgba(255,255,255,0.69),0 0 10px rgba(206,222,209,0.69);
}

.td-form .icon.align-self-center {
  left:1.5em;
  font-size: 17px;
  position:relative;
  color:rgb(255,255,255);
}

.td-form label {
  margin-left:1em;
}

.td-form h1 {
  padding-bottom:5px;
}

#btn-contact {
  background-color:rgba(41,41,41,0.74);
  border-color:#ffffff;
  color:rgb(245,245,245);
  margin-top: 0;
}

#btn-contact:hover {
  box-shadow:inset 0 1px 1px rgba(255,255,255,0.69),0 0 10px rgba(206,222,209,0.69);
}

.td-form .text-center {
  padding-bottom:5px;
}

/* Footer */
.footer-clean {
  padding:50px 0;
  color:#4b4c4d;
  width: 100%;
}

.footer-clean h3 {
  margin-top:0;
  margin-bottom:12px;
  font-weight:bold;
  font-size:16px;
}

.footer-clean ul {
  padding:0;
  list-style:none;
  line-height:1.6;
  font-size:14px;
  margin-bottom:0;
}

.footer-clean ul a {
  color:inherit;
  text-decoration:none;
  opacity:0.8;
}

.footer-clean ul a:hover {
  opacity:1;
}

.footer-clean .item.social {
  text-align:right;
}

@media (max-width:767px) {
  .footer-clean .item {
    text-align:center;
    padding-bottom:20px;
  }
}

@media (max-width: 768px) {
  .footer-clean .item.social {
    text-align:center;
  }
}

.footer-clean .item.social > a {
  font-size:24px;
  width:40px;
  height:40px;
  line-height:40px;
  display:inline-block;
  text-align:center;
  border-radius:50%;
  border:1px solid #ccc;
  margin-left:10px;
  margin-top:22px;
  color:inherit;
  opacity:0.75;
}

.footer-clean .item.social > a:hover {
  opacity:0.9;
}

@media (max-width:991px) {
  .footer-clean .item.social > a {
    margin-top:40px;
  }
}

@media (max-width:767px) {
  .footer-clean .item.social > a {
    margin-top:10px;
  }
}

.footer-clean .copyright {
  margin-top:14px;
  margin-bottom:0;
  font-size:13px;
  opacity:0.6;
}

#offer .h3, h3 {
  padding-top:25px;
}

.footer-clean {
  background-color:#f8f8ff;
}

/* Row */
.footer-clean .row {
  display:-ms-flexbox;
  display:flex;
  -ms-flex-wrap:wrap;
  flex-wrap:wrap;
  margin-right:0px;
  margin-left:0;
}

